--- a/chart.html
+++ b/chart.html
@@ -130,7 +130,7 @@
             y: {
               title: {
                 display: true,
-                text: 'Depth from MLLW (ft)'
+                text: 'Depth from MSL (ft)'
               },
               beginAtZero: false
             }
