--- a/readings.html
+++ b/readings.html
@@ -29,7 +29,7 @@
         <th>Date</th>
         <th>Time</th>
         <th>Temperature (°C)</th>
-        <th>Estimated Depth from MLLW (ft)</th>
+        <th>Estimated Depth from MSL (ft)</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -85,7 +85,7 @@
             let depth = 'N/A';
             if (val.pressure !== null && noaaPressure !== null) {
               const diff = val.pressure - noaaPressure;
-              depth = ((diff * 0.03345) - 1.80).toFixed(2);
+              depth = ((diff * 0.03345) - 2.30).toFixed(2);
             }
 
             rows.push([localDate, localTime, temp, depth]);
