--- a/chart.html
+++ b/chart.html
@@ -14,7 +14,7 @@
 <body>
 
   <h1>Honeymoon Lagoon Tides (Last 24 Hours)</h1>
-  <h2>Currently Undergoing Maintenance</h2>
+  <!-- <h2>Currently Undergoing Maintenance</h2> -->
 
   <canvas id="tideChart"></canvas>
 
